# agentic-detection-lookups

./: .mcpbignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SCHEMA.md  SECURITY.md  glama.json  manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
lookups/: gtfobins.csv  lolbas_binaries.csv  parent_child_baselines.csv
mcp-server/: README.md  server.py
mcp_server/: README.md  server.py
queries/: crowdstrike_ngsiem.md  elastic.md  microsoft_sentinel.md  splunk.md
scripts/: update_gtfobins.py  update_lolbas.py
tests/: test_tools.py
