[project]
name = "agentic-detection-lookups"
version = "0.1.0"
description = "Machine-readable detection lookups for SIEM enrichment and AI agents. MCP-native."
authors = [{name = "Gene Kazimiarovich"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
detection-lookups = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/detection-forge/agentic-detection-lookups"
Repository = "https://github.com/detection-forge/agentic-detection-lookups"
Issues = "https://github.com/detection-forge/agentic-detection-lookups/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
